fix the layout issue

--- a/style.css
+++ b/style.css
@@ -1,48 +1,45 @@
 /* MY CODE */
 
-/* * {
+* {
     outline: 1px solid red;
     font-family: 'Noto Sans TC', sans-serif;
-}  */
+} 
  
 html {
     position: relative;
 }
 
 body {
-    min-width: 780px;
     margin: 0 auto;
-}
+} 
 
 header {
     background-color: #efefef; 
-    height: 180px;
-    text-align: center;
 }
 
 nav {
-    display: inline-block;
+    width: 1000px;
+    height: 180px;
     margin: 0 auto;
-    position: relative;
-    top: 30px;
 }
 
 .logo {
     position: relative;
     top: 25px;
     width: 90px;
-    vertical-align: middle;
 } 
 
 ul {
     display: inline-block;
     margin: 0;
     padding: 0;
+    position: relative;
+    bottom: 25px;
 }
 
 li {
     display: inline;
-    margin: 0 65px;
+    margin: 0 55px;
 }
 
 li a {
@@ -60,10 +57,11 @@ li a:hover {
 
 main {
     background-color: #fdfdfd;
+    margin-bottom: 220px;
 }
 
 main .container {
-    width: 70%;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -145,7 +143,6 @@ button:hover {
 
 article {
     margin-top: 160px;
-    margin-bottom: 220px;
     padding: 0 30px;
 }
 
@@ -155,6 +152,7 @@ h3 {
 
 article p {
     columns: 2;
+    column-gap: 30px;
     margin-bottom: 0;
     font-size: 18px;
 } 
@@ -170,7 +168,7 @@ footer {
 }
 
 footer .container {
-    width: 70%;
+    width: 1000px;
     height: 80px;
     margin: 0 auto;
     position: relative;
@@ -207,8 +205,7 @@ footer .container {
 }
 
 
-/* Layout */
-
+/* Layout Model */
 .template {
     width: 100%;
     position: absolute;
